@@ -1,5 +1,5 @@
 name 'rharrison-lokkit'
-version '0.4.0'
+version '0.5.0'
 
 author 'Russell Harrison'
 license 'GPLv3+'
